Support JNDI.