@@ -23,12 +23,20 @@
 
 package eionet.rpcserver;
 
-import java.util.HashMap;
-import java.util.ResourceBundle;
-
 import java.io.File;
-import java.io.FileReader;
 import java.io.FileNotFoundException;
+import java.io.FileReader;
+import java.io.FileInputStream;
+import java.io.InputStream;
+import java.io.IOException;
+import java.util.Enumeration;
+import java.util.HashMap;
+import java.util.Hashtable;
+import java.util.Properties;
+import javax.naming.Context;
+import javax.naming.InitialContext;
+import javax.naming.Binding;
+import javax.naming.NamingException;
 
 import org.exolab.castor.xml.MarshalException;
 import org.exolab.castor.xml.ValidationException;
@@ -42,9 +50,9 @@ import eionet.acl.AppUser;
  */
 public class UITServiceRoster {
 
-    // JH161205
-    public static final String RESOURCE_BUNDLE_NAME = "uit";
+    public static final String RESOURCE_BUNDLE_NAME = "rpc";
     public static final String PROP_XMLRPC_ENCODING = "xmlrpc.encoding";
+    public static final String TOMCAT_CONTEXT = "java:/comp/env/";
 
     private static HashMap _services;
 
@@ -63,32 +71,31 @@ public class UITServiceRoster {
         _user = user;
     }
 
+    /**
+     * Initialise services.
+     */
     private static void init() throws ServiceException {
         if (_services == null) {
             _services = new HashMap();
+            Hashtable<Object, Object> props = loadProperties();
+
             File file = null;
             try {
-
-                ResourceBundle props = ResourceBundle.getBundle(RESOURCE_BUNDLE_NAME);
-
-                //fileName=props.getString("services.definition.file");
-
                 //acl admin & help admin services included
                 boolean aclAdmin = false;
                 try {
-                    fileName = props.getString("services.definition.file");
+                    fileName = (String) props.get("services.definition.file");
                 } catch(Exception e) {
                     //e.printStackTrace(System.out);
                 }
 
                 try {
-                    aclAdmin = new Boolean(props.getString("acl.admin")).booleanValue();
+                    aclAdmin = Boolean.valueOf((String)props.get("acl.admin")).booleanValue();
                 } catch(Exception e) {
-                    //e.printStackTrace(System.out);
                 }
 
 
-                if (!fileName.equals("")) {
+                if (fileName != null && !fileName.equals("")) {
                     file = new File(fileName);
 
                     FileReader reader = new FileReader(file);
@@ -123,6 +130,53 @@ public class UITServiceRoster {
                 throw new ServiceException(e, "Exception " + e.toString());
             }
         }
+    }
+
+    /**
+     * Load the configuration. First try JNDI, then fall back to property files.
+     * @return The properties in a hashtable.
+     */
+    public static Hashtable<Object, Object> loadProperties() throws ServiceException {
+        Hashtable<Object, Object> props = new Hashtable<Object, Object>();
+        try {
+            Context initContext = new InitialContext();
+            if (initContext != null) {
+                // Load from JNDI. Tomcat puts its stuff under java:comp/env:
+                for (Enumeration<Binding> e = initContext.listBindings(TOMCAT_CONTEXT + RESOURCE_BUNDLE_NAME); e.hasMoreElements();) {
+                    Binding binding = e.nextElement();
+                    props.put(binding.getName(), binding.getObject());
+                }
+            }
+        } catch (NamingException mre) {
+            //throw new ServiceException("JNDI not configured properly");
+        }
+
+        // Load from properties file
+        if (props.size() == 0 || props.containsKey("propertiesfile")) {
+            try {
+                Properties fileProps = new Properties();
+                InputStream inStream = null;
+
+                if (props.containsKey("propertiesfile")) {
+                    try {
+                        inStream = new FileInputStream((String) props.get("propertiesfile"));
+                    } catch (Exception e) {
+                        throw new ServiceException("Properties file not found");
+                    }
+                } else {
+                    inStream = UITServiceRoster.class.getResourceAsStream("/" + RESOURCE_BUNDLE_NAME + ".properties");
+                    if (inStream == null) {
+                        throw new ServiceException("Properties file is not found in the classpath");
+                    }
+                }
+                fileProps.load(inStream);
+                inStream.close();
+                props.putAll(fileProps);
+            } catch (IOException mre) {
+                throw new ServiceException("Properties file is not readable");
+            }
+        }
+        return props;
     }
 
     /**
